--- a/src/scripts/data/assets/index.yaml
+++ b/src/scripts/data/assets/index.yaml
@@ -833,6 +833,8 @@ buildingFamilies:
     - bsc/essentials
   b5c000a2:
     - bsc/essentials
+  ba53c484:
+    - maxis/base
   bc000014:
     - bsc/essentials
     - csx/mega-props-vol05
@@ -892,6 +894,14 @@ buildingFamilies:
     - bsc/essentials
   effec014:
     - bsc/essentials
+  f0000001:
+    - maxis/base
+  f0000002:
+    - maxis/base
+  f0004100:
+    - maxis/base
+  fa64ed55:
+    - maxis/base
 
 buildings:
   '00024100':
