--- a/src/scripts/data/assets/index.yaml
+++ b/src/scripts/data/assets/index.yaml
@@ -4133,10 +4133,14 @@ buildings:
     - pegasus/spam
   5443fd4d:
     - cococity/coco-pyeonhansesang-apartment
+  5487338a:
+    - koonam/fealds-theatre
   548847f5:
     - jestarr/willis-nut-bolt
   5489d9a5:
     - pegasus/spam
+  549065d1:
+    - koonam/art-live-building
   5493edf5:
     - wannglondon/tulum-homes
   549ba969:
@@ -4632,6 +4636,8 @@ buildings:
     - jestarr/moxie-bottling-company
   73e863c7:
     - wannglondon/los-angeles-home-pack-1
+  741714d3:
+    - koonam/art-live-building
   7426a43d:
     - cococity/coco-hillstate-apartment
   7443f7d1:
@@ -5565,6 +5571,8 @@ buildings:
     - jestarr/robertson-manufacturing
   b3c8dec8:
     - jestarr/central-coop-creamery
+  b4171094:
+    - koonam/art-live-building
   b426a240:
     - cococity/coco-hillstate-apartment
   b42cc621:
@@ -5577,6 +5585,8 @@ buildings:
     - wannglondon/mid-century-modern-homes-pack
   b4febd00:
     - mattb325/batprops-w2w-vol01
+  b5018a52:
+    - koonam/fealds-theatre
   b534c5c3:
     - madhatter106/new-age-and-occult-pack-vol01
   b6107934:
@@ -6536,6 +6546,8 @@ buildings:
     - jestarr/englehardt-shirt-factory
   f4185278:
     - cococity/coco-samsung-apartment
+  f4872a3f:
+    - koonam/fealds-theatre
   f641ba17:
     - madhatter106/new-age-and-occult-pack-vol02
   f64986b2:
@@ -8289,6 +8301,8 @@ lots:
     - dead-end/grimstad-pharmacy
   3483f82f:
     - dead-end/white-villa
+  3490661c:
+    - koonam/art-live-building
   3493ee05:
     - wannglondon/tulum-homes
   3538721e:
@@ -8925,6 +8939,8 @@ lots:
     - jestarr/hadmore-paint-company
   53c8ded4:
     - jestarr/central-coop-creamery
+  5487338a:
+    - koonam/fealds-theatre
   549ba97c:
     - jestarr/allied-pickle-works
   54b0b9a8:
@@ -11857,6 +11873,8 @@ lots:
     - dead-end/scandinavian-supermarkets
   73f449c3:
     - dead-end/spar-supermarket
+  741714d3:
+    - koonam/art-live-building
   7426bfa5:
     - cococity/coco-hillstate-apartment
   '74842461':
@@ -13887,6 +13905,8 @@ lots:
     - zero7/industrial-pack
   c4e9df2f:
     - wannglondon/grand-mediterranean-hotels
+  c5018c1c:
+    - koonam/fealds-theatre
   c5051165:
     - jestarr/altman-miller-machine-shop
   c5221b88:
@@ -80708,6 +80728,10 @@ models:
     - chrisadams3997/rrp-pasture-flora
   f3fcbbc1:
     - chrisadams3997/rrp-pasture-flora
+  f404b763:
+    - koonam/fealds-theatre
+  f404b763-0008:
+    - koonam/art-live-building
   f40728d2:
     - chrisadams3997/mega-props-vol02
   f40877da:
