--- a/src/scripts/data/assets/overrides.yaml
+++ b/src/scripts/data/assets/overrides.yaml
@@ -4281,6 +4281,10 @@ simtropolis/36507-delitz-designer-gallery:
       packageId: jasoncw/delitz-designer-gallery
       variantId: darknite
 
+simtropolis/36508-art-live-building-maxisnite:
+  packageId: koonam/art-live-building
+  variantId: default
+
 simtropolis/36521-allied-pickle-works-hd:
   packageId: jestarr/allied-pickle-works
   variantId: hd
@@ -4509,6 +4513,10 @@ simtropolis/36629-xenon-center:
 
 simtropolis/36632-data-view-extensions-dll:
   packageId: null-45/data-view-extensions-dll
+  variantId: default
+
+simtropolis/36655-the-fealds-theatre:
+  packageId: koonam/fealds-theatre
   variantId: default
 
 simtropolis/36660-altman-miller-machine-shop:
