--- a/src/scripts/data/assets/simtropolis/115-tools.yaml
+++ b/src/scripts/data/assets/simtropolis/115-tools.yaml
@@ -1432,6 +1432,15 @@ assets:
     uncompressed: 63248
     url: https://community.simtropolis.com/files/file/36427-sc4-map-grids/
     version: 1.0.0
+  simtropolis/36664:
+    assetId: simtropolis/36664-sc4-cli-tool
+    authors:
+      - smf_16
+    category: 115-tools
+    lastModified: 2025-01-14T08:11:41.000Z
+    name: sc4 cli tool
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2025_01/cli.thumb.png.18f2da1115a8a9b0794ab86bb5c162e2.png
+    url: https://community.simtropolis.com/files/file/36664-sc4-cli-tool/
   simtropolis/3919:
     assetId: simtropolis/3919-tragicomicus-bat-yardstick
     authors:
@@ -1452,4 +1461,4 @@ assets:
     url: https://community.simtropolis.com/files/file/4485-jbm-sims-ruler/
 
 meta:
-  timestamp: 2025-01-13T08:58:29.083Z
+  timestamp: 2025-01-14T08:38:42.212Z
